Add feature to read links for form submissions to external destinations.

--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,17 @@
 {
   "manifest_version": 2,
   "name": "VoiceOver Links",
-  "version": "1.0.0",
-  "description": "Enables screen readers to read out the destination of a link when it is focused.",
+  "version": "1.0.1",
+  "description": "Enables screen readers to announce link destinations and form submission URLs for better web security.",
   "author": "Willis Cao",
-
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "@voiceover-links",
+      "data_collection_permissions": {
+        "required": ["none"]
+      }
+    }
+  },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
@@ -13,6 +20,6 @@
     }
   ],
 
-  "permissions": ["none"]
+  "permissions": []
 }
 
